sign up logic and user data upload to cloud

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URL = mongodb+srv://omkarrg:Org77377@cluster0.xucmm0h.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+API_NAME = 'dh8npgurs'
+API_KEY = '428732767247996'
+API_SECRET = 'IWm9tiCHK1CvMgfDHJXF31Ei04Q'
