--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
     "mongoose": "^8.18.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
