video upload functionality and user validation using jwt

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGO_URL = mongodb+srv://omkarrg:Org77377@cluster0.xucmm0h.mongodb.net/?retryWr
 API_NAME = 'dh8npgurs'
 API_KEY = '428732767247996'
 API_SECRET = 'IWm9tiCHK1CvMgfDHJXF31Ei04Q'
+JWT_SECRET = '@jwt_token_7406@'
