--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
@@ -33,5 +34,5 @@
     "globals": "^16.4.0",
     "vite": "^7.1.6"
   },
-  "proxy":"http://localhost:3000/"
+  "proxy": "http://localhost:3000/"
 }
